slurm_output/slurm-5078.out
Traceback (most recent call last):
  File "/home/cme/MixEncoder/nlp_main.py", line 5, in <module>
    from nlp_trainer import TrainWholeModel
  File "/home/cme/MixEncoder/nlp_trainer.py", line 2158
    alpha=args.alpha)
                    ^
SyntaxError: positional argument follows keyword argument
